kubernetes/apps/ai-system/toolhive/operator/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
spec:
  hostnames:
    - "mcp.mistelinn.org"
  parentRefs:
    - {name: envoy-internal, namespace: network}
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway-internal
          port: 4483
